fixed list alignment

--- a/millie.css
+++ b/millie.css
@@ -45,8 +45,13 @@ footer { color: black;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px; }
+.floatleft { float: left;
+    margin: 5px 25px 5px 5px; }
+.floatright { float: right;
+    margin: 5px 5px 5px 25px; }
 .welcome { font-family: GreatVibes;
     font-size: 200%;
+    padding: 0;
     margin-top: 0.5em; }
 .link { color: forestgreen;
     text-decoration: none; }
@@ -54,11 +59,6 @@ footer { color: black;
     padding: 2em;
     box-shadow: 3px 3px black;
     overflow: auto; }
-#homehero { float: left;
-    margin: 5px 25px 5px 5px;
-    border: 1px solid black; }
-#abouthero { float: right;
-    margin: 5px 5px 5px 5px; }
 #gallery { display: grid;
     grid-template-columns: repeat(auto-fill, 410px);
     grid-template-rows: auto;
@@ -69,8 +69,7 @@ footer { color: black;
     transform: rotate(3deg);
     display: none; }
 #listimg { list-style-image: url("pawprint_xsmall.png");
-    margin-left: 140px;
-    padding-left: 140px;}
+    list-style-position: inside; }
 form { display: flex;
     flex-flow: column nowrap; }
 input, datalist textarea { margin-bottom: 0.5em; }
